--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
 <html>
   <head>
-    <title>Remix: Asteroid 4</title>
+    <title>Asteroid 4</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preload" href="applab/fa-brands-400.woff2" as="font">
-    <link rel="preload" href="applab/fa-solid-900.woff2" as="font">
-    <link rel="preload" href="applab/fa-regular-400.woff2" as="font">
-    <link rel="preload" href="applab/fa-v4compatibility.woff2" as="font">
-    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script>
-      function setExportConfig(config) {
-        window.EXPORT_OPTIONS = config;
-      }
-    </script>
-    <script src="https://studio.code.org/projects/applab/F_lNf1qZtu-nrXZDa6cG3oO2CR9hd5i_FwMuo03iLhw/export_config?script_call=setExportConfig"></script>
-    <script src="applab/applab-api.js"></script>
-    <script src="https://www.google.com/jsapi"></script>
-    <link rel="stylesheet" href="applab/applab.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    
   </head>
   <body>
  
       <div class="screen" 
       <label id = "time">TIME: </label> 
-        <img src="" id="bg2">
-        <img src="" id="bg2">
+        <img src="" id="bg1" class="background">
+        <img src="" id="bg2" class="background">
     </div>
   </body>
 </html>
