--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
       <div class="screen" 
       <label id = "time">TIME: </label> 
-        <img src="" id="bg1" class="background">
+        <img src="" id="space.png" class="background">
         <img src="" id="bg2" class="background">
     </div>
   </body>
