--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  
       <div class="screen" 
       <label id = "time">TIME: </label> 
-        <img src="" id="space.jpg" class="background">
-        <img src="" id="space1.jpg" class="background">
+        <img src="" id="bg1" class="background">
+        <img src="" id="bg2" class="background">
     </div>
   </body>
 </html>
