--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html>
   <head>
-    <title>Asteroid 4</title>
+    <title>Space Game</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    
+   
+  <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
- 
-      <div class="screen" 
-      <label id = "time">TIME: </label> 
-        <img src="" id="bg1" class="background">
-        <img src="" id="bg2" class="background">
-    </div>
+   
+      <div class="screen">
+        <label id="time">TIME: </label>
+         <img src="" id="bg1" class="background">
+         <img src="" id="bg2" class="background">
+      </div>
+
   </body>
 </html>
