--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    
       <div class="screen">
         <label id="time">TIME: </label>
-         <img src="" id="bg1" class="background">
-         <img src="" id="bg2" class="background">
+         <img src="assets/6062a.png" id="bg1" class="background">
+         <img src="assets/6062b.png" id="bg2" class="background">
       </div>
 
   </body>
